--- a/MyHome/app/src/main/res/values/colors.xml
+++ b/MyHome/app/src/main/res/values/colors.xml
@@ -377,4 +377,15 @@
     <color name="md_blue_grey_800">#37474F</color>
     <color name="md_blue_grey_900">#263238</color>
 
+    <!--Home - Dashboard-->
+    <color name="db_gunmetal">#4d525a</color>
+    <color name="db_light_grey">#e3e1dc</color>
+    <color name="db_charcoal_grey">#484b4d</color>
+    <color name="db_deep_aqua">#097288</color>
+    <color name="db_white">#d9d9d9</color>
+    <color name="db_white_two">#ffffff</color>
+    <color name="db_white_three">#f5f5f5</color>
+
+
+
 </resources>
