--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -37,8 +37,9 @@
     <style name="enableButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/button_enabled</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:textAppearance">@style/tradeGothicLTStdBold_18</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:layout_height">44dp</item>
     </style>
 
@@ -56,6 +57,22 @@
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">14sp</item>
         <item name="android:layout_height">44dp</item>
+    </style>
+    <style name="db_scheduleButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/db_schedule_button_enable</item>
+        <item name="android:textColor">@color/db_white_two</item>
+        <item name="android:textAppearance">@style/tradeGothicLTStdBold_18</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_height">44dp</item>
+    </style>
+    <style name="db_searchButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/db_search_button_enable</item>
+        <item name="android:textColor">@color/db_gunmetal</item>
+        <item name="android:textAppearance">@style/tradeGothicLTStdLight_16</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:layout_height">46dp</item>
     </style>
 
     <style name="textStylebase" />
@@ -75,6 +92,36 @@
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textColor">@color/md_blue_grey_650</item>
     </style>
+    <style name="tradeGothicLTStdBold" parent="textStylebase">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/db_white_two</item>
+    </style>
+
+    <!--Home - Daashboard Start-->
+    <style name="tradeGothicLTStdBd2" parent="textStylebase">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">normal</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:lineSpacingExtra">2sp</item>
+        <item name="android:textColor">@color/db_gunmetal</item>
+    </style>
+
+    <style name="tradeGothicLTStdBd2_36" parent="tradeGothicLTStdBd2">
+        <item name="android:textSize">36sp</item>
+    </style>
+    <style name="tradeGothicLTStdBold_18" parent="tradeGothicLTStdBold">
+        <item name="android:textSize">18sp</item>
+    </style>
+    <style name="dbDivider">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">?android:attr/listDivider</item>
+    </style>
+    <!--Home - Daashboard End-->
 
     <style name="tradeGothicLTStdLight_16" parent="tradeGothicLTStdLight">
         <item name="android:textSize">16sp</item>
