--- a/MyHome/app/src/main/res/layout/book_done.xml
+++ b/MyHome/app/src/main/res/layout/book_done.xml
@@ -135,5 +135,12 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:indeterminate="true"
+            android:visibility="gone" />
     </RelativeLayout>
 </ScrollView>
