--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -69,7 +69,7 @@
     <style name="db_searchButtonStyle" parent="Widget.AppCompat.Button">
         <item name="android:background">@drawable/db_search_button_enable</item>
         <item name="android:textColor">@color/db_gunmetal</item>
-        <item name="android:textAppearance">@style/tradeGothicLTStdLight_16</item>
+        <item name="android:textAppearance">@style/tradeGothicLTStd_16</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">16sp</item>
         <item name="android:layout_height">46dp</item>
@@ -94,7 +94,7 @@
     </style>
     <style name="tradeGothicLTStdBold" parent="textStylebase">
         <item name="android:textAllCaps">false</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:typeface">normal</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:textColor">@color/db_white_two</item>
@@ -103,7 +103,7 @@
     <!--Home - Daashboard Start-->
     <style name="tradeGothicLTStdBd2" parent="textStylebase">
         <item name="android:textAllCaps">false</item>
-        <item name="android:textStyle">normal</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:typeface">normal</item>
         <item name="android:fontFamily">sans-serif</item>
         <item name="android:lineSpacingExtra">2sp</item>
@@ -113,6 +113,13 @@
     <style name="tradeGothicLTStdBd2_36" parent="tradeGothicLTStdBd2">
         <item name="android:textSize">36sp</item>
     </style>
+    <style name="tradeGothicLTStdBd2_20" parent="tradeGothicLTStdBd2">
+        <item name="android:textSize">20sp</item>
+    </style>
+    <style name="tradeGothicLTStdBd2_20_deepAqua" parent="tradeGothicLTStdBd2">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/db_deep_aqua</item>
+    </style>
     <style name="tradeGothicLTStdBold_18" parent="tradeGothicLTStdBold">
         <item name="android:textSize">18sp</item>
     </style>
@@ -120,6 +127,9 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
         <item name="android:background">?android:attr/listDivider</item>
+    </style>
+    <style name="tradeGothicLTStd_16" parent="tradeGothicLTStd">
+        <item name="android:textSize">16sp</item>
     </style>
     <!--Home - Daashboard End-->
 
