--- a/MyHome/app/src/main/res/layout/provider_details.xml
+++ b/MyHome/app/src/main/res/layout/provider_details.xml
@@ -56,7 +56,9 @@
             android:layout_below="@id/speciality"
             android:layout_marginEnd="18dp"
             android:layout_marginTop="18dp"
-            android:text="@string/book_appointment" />
+            android:text="@string/book_appointment"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <com.github.aakira.expandablelayout.ExpandableLinearLayout
             android:id="@+id/expandable_layout"
