--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -43,7 +43,7 @@
         <item name="android:layout_height">44dp</item>
     </style>
 
-    <style name="primaryButtonStyle" parent="Widget.AppCompat.Button">
+    <style name="primaryButtonStyle" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/button_primary</item>
         <item name="android:textColor">@color/primary_text</item>
         <item name="android:textAllCaps">false</item>
