--- a/MyHome/app/src/main/res/layout/book_select_status.xml
+++ b/MyHome/app/src/main/res/layout/book_select_status.xml
@@ -23,7 +23,8 @@
         android:layout_height="45dp"
         android:layout_marginTop="18dp"
         android:gravity="center"
-        android:text="@string/yes" />
+        android:text="@string/yes"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/book_existing"
@@ -32,7 +33,8 @@
         android:layout_height="45dp"
         android:layout_marginTop="18dp"
         android:gravity="center"
-        android:text="@string/no" />
+        android:text="@string/no"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/no_times_available"
