--- a/MyHome/app/src/main/res/layout/fragment_login.xml
+++ b/MyHome/app/src/main/res/layout/fragment_login.xml
@@ -84,7 +84,7 @@
                 android:text="@string/action_Login"
                 android:textAllCaps="false"
                 android:textSize="18sp"
-                android:textStyle="normal" />
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/forgot_password"
