--- a/MyHome/app/src/main/res/layout/fragment_login.xml
+++ b/MyHome/app/src/main/res/layout/fragment_login.xml
@@ -1,4 +1,5 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -34,43 +35,57 @@
             android:focusableInTouchMode="true"
             android:orientation="vertical">
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/email"
-                style="@style/tradeGothicLTStdLight_14"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/email_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/password"
-                android:layout_marginBottom="16dp"
-                android:layout_marginLeft="52dp"
-                android:layout_marginRight="52dp"
-                android:hint="@string/prompt_email"
-                android:imeOptions="actionNext"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textSize="18sp"
-                tools:ignore="HardcodedText" />
+                android:layout_above="@+id/password_layout">
 
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/email"
+                    style="@style/tradeGothicLTStdLight_14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginLeft="52dp"
+                    android:layout_marginRight="52dp"
+                    android:hint="@string/prompt_email"
+                    android:imeOptions="actionNext"
+                    android:inputType="textEmailAddress"
+                    android:maxLines="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:textSize="18sp"
+                    tools:ignore="HardcodedText" />
+            </android.support.design.widget.TextInputLayout>
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/password"
-                style="@style/tradeGothicLTStdLight_14"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/password_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/log_in_button"
-                android:layout_marginBottom="36dp"
-                android:layout_marginLeft="52dp"
-                android:layout_marginRight="52dp"
-                android:drawableRight="@mipmap/show_password"
-                android:hint="@string/prompt_password"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:textSize="18sp"
-                tools:ignore="HardcodedText" />
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/primary">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/password"
+                    style="@style/tradeGothicLTStdLight_14"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/log_in_button"
+                    android:layout_marginBottom="36dp"
+                    android:layout_marginLeft="52dp"
+                    android:layout_marginRight="52dp"
+                    android:drawableRight="@mipmap/show_password"
+                    android:hint="@string/prompt_password"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:textSize="18sp"
+                    tools:ignore="HardcodedText" />
+            </android.support.design.widget.TextInputLayout>
 
             <Button
                 android:id="@+id/log_in_button"
