--- a/MyHome/app/src/main/res/values/styles.xml
+++ b/MyHome/app/src/main/res/values/styles.xml
@@ -20,12 +20,12 @@
         <item name="android:textColorPrimaryInverse">@color/toolbar_white_text</item>
     </style>
 
-    <style name="tealButtonStyle" parent="Widget.AppCompat.Button">
+    <style name="tealButtonStyle" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/button_boarder_teal</item>
         <item name="android:textColor">@color/primary</item>
     </style>
 
-    <style name="grayButtonStyle" parent="Widget.AppCompat.Button">
+    <style name="grayButtonStyle" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/button_boarder_grey</item>
         <item name="android:textColor">@color/grey</item>
         <item name="android:textStyle">normal</item>
@@ -34,7 +34,7 @@
         <item name="android:layout_height">44dp</item>
     </style>
 
-    <style name="enableButtonStyle" parent="Widget.AppCompat.Button">
+    <style name="enableButtonStyle" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/button_enabled</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textAppearance">@style/tradeGothicLTStdBold_18</item>
@@ -51,14 +51,14 @@
         <item name="android:layout_height">44dp</item>
     </style>
 
-    <style name="selectableButtonStyle" parent="Widget.AppCompat.Button">
+    <style name="selectableButtonStyle" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/selectable_button</item>
         <item name="android:textColor">@drawable/selectable_button_text</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">14sp</item>
         <item name="android:layout_height">44dp</item>
     </style>
-    <style name="db_scheduleButtonStyle" parent="Widget.AppCompat.Button">
+    <style name="db_scheduleButtonStyle" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/db_schedule_button_enable</item>
         <item name="android:textColor">@color/db_white_two</item>
         <item name="android:textAppearance">@style/tradeGothicLTStdBold_18</item>
@@ -66,7 +66,7 @@
         <item name="android:textSize">18sp</item>
         <item name="android:layout_height">44dp</item>
     </style>
-    <style name="db_searchButtonStyle" parent="Widget.AppCompat.Button">
+    <style name="db_searchButtonStyle" parent="Widget.AppCompat.Button.Borderless">
         <item name="android:background">@drawable/db_search_button_enable</item>
         <item name="android:textColor">@color/db_gunmetal</item>
         <item name="android:textAppearance">@style/tradeGothicLTStd_16</item>
